UPDATED to Java 8 and also updated some dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.rovo</groupId>
-	<artifactId>super-pom</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>at.rovo</groupId>
+    <artifactId>super-pom</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>Super-Pom</name>
-	<description>Central point for version and dependency management</description>
+    <name>Super-Pom</name>
+    <description>Central point for version and dependency management</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<plugin.assembly.version>2.3</plugin.assembly.version>
-		<log4j.version>2.0-rc2</log4j.version>
-		<junit.version>4.11</junit.version>
-		<sleepycat.version>5.0.58</sleepycat.version>
-		<berkeley.version></berkeley.version>
-		<sqlite4java.version>0.282</sqlite4java.version>
-		<seaglass.version>0.2</seaglass.version>
-		<!-- own package versions -->
-		<commons.version>0.0.1-SNAPSHOT</commons.version>
-		<parser.version>0.0.1-SNAPSHOT</parser.version>
-		<drum.version>0.0.1-SNAPSHOT</drum.version>
-		<stemmer.version>0.0.1-SNAPSHOT</stemmer.version>
-		<classifier.version>0.0.1-SNAPSHOT</classifier.version>
-		<diff.version>0.0.1-SNAPSHOT</diff.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <plugin.assembly.version>2.3</plugin.assembly.version>
+        <log4j.version>2.2</log4j.version>
+        <junit.version>4.12</junit.version>
+        <sleepycat.version>5.0.58</sleepycat.version>
+        <berkeley.version>3.2.76</berkeley.version>
+        <sqlite4java.version>0.282</sqlite4java.version>
+        <seaglass.version>0.2</seaglass.version>
+        <!-- own package versions -->
+        <commons.version>0.0.1-SNAPSHOT</commons.version>
+        <parser.version>0.0.1-SNAPSHOT</parser.version>
+        <drum.version>0.0.1-SNAPSHOT</drum.version>
+        <stemmer.version>0.0.1-SNAPSHOT</stemmer.version>
+        <classifier.version>0.0.1-SNAPSHOT</classifier.version>
+        <diff.version>0.0.1-SNAPSHOT</diff.version>
+    </properties>
 
-	<repositories>
-		<repository>
-			<id>oracleReleases</id>
-			<name>Oracle Released Java Packages</name>
-			<url>http://download.oracle.com/maven</url>
-			<layout>default</layout>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots />
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>oracleReleases</id>
+            <name>Oracle Released Java Packages</name>
+            <url>http://download.oracle.com/maven</url>
+            <layout>default</layout>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots/>
+        </repository>
+    </repositories>
 
-	<dependencyManagement>
-		<dependencies>
-			<!-- Log4J -->
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-api</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-core</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-			<!-- JUnit -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <!-- Log4J -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <!-- JUnit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
-					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
-						<showDeprecation>true</showDeprecation>
-						<showWarnings>true</showWarnings>
-						<optimize>true</optimize>
-					</configuration>
-				</plugin>
-				<!-- Surefire is a test framework project. -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.17</version>
-					<configuration>
-						<systemProperties>
-							<property>
-								<name>log4j.configurationFile</name>
-								<value>${basedir}/target/test-classes/log/log4j2-test.xml</value>
-							</property>
-						</systemProperties>
-					</configuration>
-				</plugin>
-				<!-- Failsafe is used for integration testing-->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.17</version>
-					<configuration>
-						<parallel>methods</parallel>
-						<threadCount>10</threadCount>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <optimize>true</optimize>
+                    </configuration>
+                </plugin>
+                <!-- Surefire is a test framework project. -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18.1</version>
+                    <configuration>
+                        <systemProperties>
+                            <property>
+                                <name>log4j.configurationFile</name>
+                                <value>${basedir}/target/test-classes/log/log4j2-test.xml</value>
+                            </property>
+                        </systemProperties>
+                    </configuration>
+                </plugin>
+                <!-- Failsafe is used for integration testing-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.17</version>
+                    <configuration>
+                        <parallel>methods</parallel>
+                        <threadCount>10</threadCount>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
