--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,15 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <plugin.assembly.version>2.3</plugin.assembly.version>
-        <log4j.version>2.2</log4j.version>
+        <plugin.assembly.version>2.6</plugin.assembly.version>
+        <log4j.version>2.6.2</log4j.version>
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <sleepycat.version>5.0.58</sleepycat.version>
         <berkeley.version>3.2.76</berkeley.version>
         <sqlite4java.version>0.282</sqlite4java.version>
         <seaglass.version>0.2</seaglass.version>
+        <junit-toolbox.version>2.2</junit-toolbox.version>
         <!-- own package versions -->
         <commons.version>0.0.1-SNAPSHOT</commons.version>
         <parser.version>0.0.1-SNAPSHOT</parser.version>
@@ -71,6 +72,13 @@
                 <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
+            <!-- Wildcard pattern suite -->
+            <dependency>
+                <groupId>com.googlecode.junit-toolbox</groupId>
+                <artifactId>junit-toolbox</artifactId>
+                <version>${junit-toolbox.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -80,7 +88,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
+                    <version>3.5.1</version>
                     <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
@@ -89,11 +97,25 @@
                         <optimize>true</optimize>
                     </configuration>
                 </plugin>
+                <!-- enable test-jar support-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
+
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
                 <!-- Surefire is a test framework project. -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.18.1</version>
+                    <version>2.19.1</version>
                     <configuration>
                         <systemProperties>
                             <property>
@@ -107,7 +129,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.18.1</version>
+                    <version>2.19.1</version>
                     <configuration>
                         <parallel>methods</parallel>
                         <threadCount>10</threadCount>
